doc, scss, js additions

--- a/packages/storybook-html/src/components/tabs/tabs.docs.mdx
+++ b/packages/storybook-html/src/components/tabs/tabs.docs.mdx
@@ -21,34 +21,8 @@ hierarchical level.
 </Canvas>
 
 ```html
-  <div class="tabs tabs--outline">
-    <div class="tabs__tab-list" role="tablist" aria-label="Tab List">
-      <button class="tabs__tab tabs__tab--active" role="tab" aria-selected="true" aria-controls="tab1-panel" id="tab1">Tab 1</button>
-      <button class="tabs__tab" role="tab" aria-selected="false" aria-controls="tab2-panel" id="tab2" tabindex="-1">Tab 2</button>
-      <button class="tabs__tab" role="tab" aria-selected="false" aria-controls="tab3-panel" id="tab3" tabindex="-1">Tab 3</button>
-      <a class="tabs__link" href="#">Tab link</a>
-    </div>
-    <div class="tabs__tab-panel tabs__tab-panel--active" role="tabpanel" id="tab1-panel" aria-labelledby="tab1" tabindex="0">
-      <p>Tab1 panel text</p>
-    </div>
-    <div class="tabs__tab-panel" role="tabpanel" id="tab2-panel" aria-labelledby="tab2" tabindex="0" hidden="">
-      <p>Tab2 panel text</p>
-    </div>
-    <div class="tabs__tab-panel" role="tabpanel" id="tab3-panel" aria-labelledby="tab3" tabindex="0" hidden="">
-      <p>Tab3 panel text</p>
-    </div>
-  </div>
-```
-
-### Scrollable
-
-<Canvas withSource="none">
-  <Story id="components-tabs--tabs-scrollable" />
-</Canvas>
-
-```html
-  <div id="tabsScrollableExample" class="tabs tabs--outline">
-    <div class="tabs__tab-list-scrollable">
+  <div id="tabsDefaultExample" class="tabs tabs--outline">
+    <div class="tabs__tab-list-wrapper">
       <div class="tabs__tab-list" role="tablist" aria-label="Tab List">
         <button class="tabs__tab tabs__tab--active" role="tab" aria-selected="true" aria-controls="tab1-panel" id="tab1">Tab 1</button>
         <button class="tabs__tab" role="tab" aria-selected="false" aria-controls="tab2-panel" id="tab2" tabindex="-1">Tab 2</button>
@@ -56,6 +30,7 @@ hierarchical level.
         <button class="tabs__tab" role="tab" aria-selected="false" aria-controls="tab4-panel" id="tab4" tabindex="-1">Tab 4</button>
         <button class="tabs__tab" role="tab" aria-selected="false" aria-controls="tab5-panel" id="tab5" tabindex="-1">Tab 5</button>
         <button class="tabs__tab" role="tab" aria-selected="false" aria-controls="tab6-panel" id="tab6" tabindex="-1">Tab 6</button>
+        <button class="tabs__tab" role="tab" aria-selected="false" aria-controls="tab7-panel" id="tab7" tabindex="-1">Tab 7</button>
         <a class="tabs__link" href="#">Tab link</a>
       </div>
     </div>
@@ -76,6 +51,9 @@ hierarchical level.
     </div>
     <div class="tabs__tab-panel" role="tabpanel" id="tab6-panel" aria-labelledby="tab6" tabindex="0" hidden="">
       <p>Tab6 panel text</p>
+    </div>
+    <div class="tabs__tab-panel" role="tabpanel" id="tab7-panel" aria-labelledby="tab7" tabindex="0" hidden="">
+      <p>Tab7 panel text</p>
     </div>
   </div>
 ```
@@ -166,14 +144,20 @@ hierarchical level.
 - Don’t use tabs for moving through sequential content that needs to be read in a particular order.
 - Don’t mix tabs that contain only text, with tabs that contain only icons. Use either all text labels, all icon labels, or both, across all labels.
 - Although label text can wrap to a second line, scrollable tabs confine text to a single row.
-- Don’t resize text labels to fit them onto a single line. If labels are too long, wrap text to a second line or use scrollable tabs.
+- Don’t resize text labels to fit them onto a single line.
 - Don’t truncate labels unless required.
-
+<br />
 
 ## Accessibility
 
-- The WAI-ARIA roles used are [role="tab"], [role="tablist"], [role="tabpanel"].
-
+- When the user tabs through the tabs, it receives focus and automatically opens its related tab panel.
+- The WAI-ARIA roles used are `[role="tablist"]` for the tab list, `[role="tab"]` for the individual tab items and `[role="tabpanel"]` for the tab panels.
+- Tab active state: `tabindex = "0"`, classname `tabs__tab--active` is added, attribute `aria-selected = "true"`.
+- Tab inactive state: `tabindex = "-1"`, classname `tabs__tab--active` is removed, attribute `aria-selected = "false"`.
+- Tab panel active state: `tabindex = "0"`, classname `tabs__tab-panel--active` is added, attribute `hidden` is removed.
+- Tab panel inactive state: `tabindex = "0"`, classname `tabs__tab-panel--active` is removed, attribute `hidden` is added.
+- Colour contrast test for the tabs showed a WCAG AA Pass.
+<br />
 
 ## JavaScript reference
 
@@ -202,6 +186,6 @@ new Tabs([options]);
 | Name | Type | Attributes | Default | Description |
 | ---- | ---- | ---------- | ------- | ----------- |
 | container | HTMLElement | Optional | | Optional container for tabs and panels. Useful for when you have multiple tab lists on a page. |
-| tabListSelector | String | Optional | `[role="tablist"]` | Selector string of the tab lists. |
-| tabSelector | String | Optional | `[role="tab"]` | Selector string of the tabs. |
-| tabPanelSelector | String | Optional | `[role="tabpanel"]` | Selector string of the tab panels. |
+| tabListSelector | String | Optional | `.tabs__tab-list` | Selector string of the tab lists. |
+| tabSelector | String | Optional | `.tabs__tab` | Selector string of the tabs. |
+| tabPanelSelector | String | Optional | `.tabs__tab-panel` | Selector string of the tab panels. |
