Grid menu height equalised, doc amend etc

--- a/packages/storybook-html/src/components/grid-menu/grid-menu.docs.mdx
+++ b/packages/storybook-html/src/components/grid-menu/grid-menu.docs.mdx
@@ -158,18 +158,18 @@ One where the height of the list elements is by default set to 'auto' and the ot
 
 
 ### b) Grid menu - height equalised
-In this category of the grid menu component, if the height of an item is bigger the alignment of the items are taken care of via JS.
+In this category of the grid menu component, if the height of an item is bigger, the alignment of the items are taken care of.
 
 <Story id="components-grid-menu--equalised" />
 
 ```html
 <h3>Grid menu - equalised</h3>
-<ul class="uq-grid-menu">
-  <li class="uq-grid-menu--equalised"><a href="#"><span class="uq-grid-menu__title">Refresh to see me equalise!</span></a></li>
-  <li class="uq-grid-menu--equalised"><a href="#"><span class="uq-grid-menu__title">Menu link 2</span></a></li>
-  <li class="uq-grid-menu--equalised"><a href="#"><span class="uq-grid-menu__title">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi interdum eros vitae dignissim luctus. Phasellus et ligula est.</span></a></li>
-  <li class="uq-grid-menu--equalised"><a href="#"><span class="uq-grid-menu__title">Menu link 4</span></a></li>
-  <li class="uq-grid-menu--equalised"><a href="#"><span class="uq-grid-menu__title">Menu link 5</span></a></li>
-  <li class="uq-grid-menu--equalised"><a href="#"><span class="uq-grid-menu__title">Menu link 6</span></a></li>
+<ul class="uq-grid-menu uq-grid-menu--equalised">
+  <li class="uq-grid-menu__item"><a class="uq-grid-menu__link" href="#"><span class="uq-grid-menu__title">Refresh to see me equalise!</span></a></li>
+  <li class="uq-grid-menu__item"><a class="uq-grid-menu__link" href="#"><span class="uq-grid-menu__title">Menu link 2</span></a></li>
+  <li class="uq-grid-menu__item"><a class="uq-grid-menu__link" href="#"><span class="uq-grid-menu__title">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi interdum eros vitae dignissim luctus. Phasellus et ligula est.</span></a></li>
+  <li class="uq-grid-menu__item"><a class="uq-grid-menu__link" href="#"><span class="uq-grid-menu__title">Menu link 4</span></a></li>
+  <li class="uq-grid-menu__item"><a class="uq-grid-menu__link" href="#"><span class="uq-grid-menu__title">Menu link 5</span></a></li>
+  <li class="uq-grid-menu__item"><a class="uq-grid-menu__link" href="#"><span class="uq-grid-menu__title">Menu link 6</span></a></li>
 </ul>
 ```
