Refactor `core` and propagate changes to affected packages

--- a/packages/storybook-html/src/components/core/colour-base.story.mdx
+++ b/packages/storybook-html/src/components/core/colour-base.story.mdx
@@ -173,9 +173,9 @@ Neutral tones can be used as a background colour.
     </tr>
     <tr  className="uqds-table__row">
       <td className="uqds-table__item"><div className="uqds-colour__palette uqds-link-color"></div></td>
-      <td className="uqds-table__item" data-title="Name:">Link color</td>
-      <td className="uqds-table__item" data-title="Variable:"><code>$link-color</code></td>
-      <td className="uqds-table__item" data-title="HEX:">#2377cb</td>
+      <td className="uqds-table__item" data-title="Name:">Link</td>
+      <td className="uqds-table__item" data-title="Variable:"><code>$link</code></td>
+      <td className="uqds-table__item" data-title="HEX:">#1e72c6</td>
       <td className="uqds-table__item" data-title="Usage:">Default link colour</td>
     </tr>
   </tbody>
