--- a/packages/storybook-html/src/components/core/colour-apply.story.mdx
+++ b/packages/storybook-html/src/components/core/colour-apply.story.mdx
@@ -150,21 +150,21 @@ Icons should generally be the same colour as any adjacent text
   <tr className="uqds-table__row">
     <td className="uqds-table__item"><div className="uqds-colour__palette uqds-link-color"></div></td>
     <td className="uqds-table__item" data-title="Name:">Link color</td>
-    <td className="uqds-table__item" data-title="Variable:"><code>$link-color</code></td>
-    <td className="uqds-table__item" data-title="HEX:">#2377cb</td>
+    <td className="uqds-table__item" data-title="Variable:"><code>$link</code></td>
+    <td className="uqds-table__item" data-title="HEX:">#1e72c6</td>
     <td className="uqds-table__item" data-title="Usage:">Default link and button colour</td>
   </tr>
   <tr className="uqds-table__row">
     <td className="uqds-table__item"><div className="uqds-colour__palette uqds-link-active-color"></div></td>
     <td className="uqds-table__item" data-title="Name:">Link active color</td>
-    <td className="uqds-table__item" data-title="Variable:"><code>$link-active-color</code></td>
+    <td className="uqds-table__item" data-title="Variable:"><code>$link-active</code></td>
     <td className="uqds-table__item" data-title="HEX:">#005ea5</td>
     <td className="uqds-table__item" data-title="Usage:">Link and button active colour</td>
   </tr>
   <tr className="uqds-table__row">
     <td className="uqds-table__item"><div className="uqds-colour__palette uqds-link-hover-color"></div></td>
     <td className="uqds-table__item" data-title="Name:">Link hover color</td>
-    <td className="uqds-table__item" data-title="Variable:"><code>$link-hover-color</code></td>
+    <td className="uqds-table__item" data-title="Variable:"><code>$link-hover</code></td>
     <td className="uqds-table__item" data-title="HEX:">#005ea5</td>
     <td className="uqds-table__item" data-title="Usage:">Link and button hover colour</td>
   </tr>
@@ -306,7 +306,7 @@ These can be used on a white background or as background colours to white text, 
   <tr  className="uqds-table__row">
     <td className="uqds-table__item"><div className="uqds-colour__palette uqds-green-dark10"></div></td>
     <td className="uqds-table__item" data-title="Name:">Success</td>
-    <td className="uqds-table__item" data-title="Variable:"><code>$uq-green-dark10</code></td>
+    <td className="uqds-table__item" data-title="Variable:"><code>$success</code></td>
     <td className="uqds-table__item" data-title="HEX:">#238029</td>
     <td className="uqds-table__item" data-title="Usage:">Success, available</td>
   </tr>
@@ -319,8 +319,8 @@ These can be used on a white background or as background colours to white text, 
   </tr>
   <tr  className="uqds-table__row">
     <td className="uqds-table__item"><div className="uqds-colour__palette uqds-red-dark40"></div></td>
-    <td className="uqds-table__item" data-title="Name:">UQ Red Dark 40</td>
-    <td className="uqds-table__item" data-title="Variable:"><code>$uq-red-dark40</code></td>
+    <td className="uqds-table__item" data-title="Name:">Alert</td>
+    <td className="uqds-table__item" data-title="Variable:"><code>$alert</code></td>
     <td className="uqds-table__item" data-title="HEX:">#9b1129</td>
     <td className="uqds-table__item" data-title="Usage:">Error, unavailable; there <em>is</em> a problem</td>
   </tr>
