Status Doc created, documentation tags added

--- a/packages/storybook-html/src/components/body/body.story.mdx
+++ b/packages/storybook-html/src/components/body/body.story.mdx
@@ -4,7 +4,7 @@ import StatusBadge from '../../../.storybook/custom/components/StatusBadge';
 <Meta title="Components/Body/Body" />
 
 # Body
-<StatusBadge.Development />
+<StatusBadge.Development /><StatusBadge.DraftDoc />
 
 The `@uqds/body` package provides basic HTML element style rules and utility
 classes.
