--- a/packages/storybook-html/src/components/hero/hero.docs.mdx
+++ b/packages/storybook-html/src/components/hero/hero.docs.mdx
@@ -4,7 +4,8 @@ import StatusBadge from '../../../.storybook/custom/components/StatusBadge';
 <Meta title="Components/Hero/All" />
 
 # Hero
-<StatusBadge.Development />
+
+<StatusBadge.Development /><StatusBadge.DraftDoc />
 
 ### Default hero
 
