--- a/packages/storybook-html/src/components/pagination/pagination.story.mdx
+++ b/packages/storybook-html/src/components/pagination/pagination.story.mdx
@@ -4,7 +4,8 @@ import StatusBadge from '../../../.storybook/custom/components/StatusBadge';
 <Meta title="Components/Pagination/Pagination states" />
 
 # Pagination
-<StatusBadge.Review />
+
+<StatusBadge.Review /><StatusBadge.DraftDoc />
 
 Pagination, also known as paging, is the process of dividing a document into discrete pages, either electronic pages or printed pages.
 
