--- a/packages/storybook-html/src/components/previous-next/previous-next.docs.mdx
+++ b/packages/storybook-html/src/components/previous-next/previous-next.docs.mdx
@@ -3,19 +3,15 @@ import StatusBadge from '../../../.storybook/custom/components/StatusBadge';
 
 # Previous next
 
-<StatusBadge.Stable />
+<StatusBadge.Review /><StatusBadge.ReviewDoc />
 
 <a href="https://github.com/uq-its-ss/design-system/issues" class="uq-button uq-button--text" target="_blank">Check for open issues</a>
-
-
 
 ## Overview
 
 - The Previous-next component is also a form of pagination. 
 - It provides previous and next buttons (links) to navigate between pages or between tab contents on the same page. 
 - They are aligned to the sides of the page or in some instances to the sides of the tab contents.
-
-
 
 ## Default example
 
@@ -80,8 +76,6 @@ An instance when only the previous button is visible
   </div>
 ```
 
-
-
 ## How and when to use
 
 - The Previous-next component can be used with or without the progression component.
@@ -89,8 +83,6 @@ An instance when only the previous button is visible
 ### Breakpoints
 
 - The previous and next buttons collapses at viewport widths less than 640px.
-
-
 
 ## Related
 
