--- a/packages/storybook-html/src/components/progression/progression.docs.mdx
+++ b/packages/storybook-html/src/components/progression/progression.docs.mdx
@@ -3,17 +3,13 @@ import StatusBadge from '../../../.storybook/custom/components/StatusBadge';
 
 # Progression
 
-<StatusBadge.Stable />
+<StatusBadge.Review /><StatusBadge.ReviewDoc />
 
 <a href="https://github.com/uq-its-ss/design-system/issues" class="uq-button uq-button--text" target="_blank">Check for open issues</a>
-
-
 
 ## Overview
 
 The Progression component is a progress indicator helping the user to complete a step by step process.
-
-
 
 ## Default example
 
@@ -141,8 +137,6 @@ The instance when all steps are done and completed.
     </ul>
 ```
 
-
-
 ## How and when to use
 
 - This component should be used only if the information is to be revealed in a progressive, step by step process.
@@ -178,8 +172,6 @@ Note that adding the class `is-complete` to the child li element denotes that th
 ### Breakpoints
 
 - The progression hides the step marker label at viewport widths less than 640px.
-
-
 
 ## Related
 
