--- a/packages/storybook-html/src/components/sections/sections.docs.mdx
+++ b/packages/storybook-html/src/components/sections/sections.docs.mdx
@@ -2,7 +2,8 @@ import { Meta, Story, Canvas } from '@storybook/addon-docs/blocks';
 import StatusBadge from '../../../.storybook/custom/components/StatusBadge';
 
 # Sections
-<StatusBadge.Review />
+
+<StatusBadge.Review /><StatusBadge.DraftDoc />
 
 ## Overview
 
