--- a/packages/storybook-html/src/components/table/table.docs.mdx
+++ b/packages/storybook-html/src/components/table/table.docs.mdx
@@ -3,17 +3,13 @@ import StatusBadge from '../../../.storybook/custom/components/StatusBadge';
 
 # Table
 
-<StatusBadge.Review />
+<StatusBadge.Review /><StatusBadge.ReviewDoc />
 
 <a href="https://github.com/uq-its-ss/design-system/issues" class="uq-button uq-button--text" target="_blank">Check for open issues</a>
-
-
 
 ## Overview
 
 Table components are used to display data for data comparison. The table should be responsive on different viewport devices and accessible to assistive technologies like screen readers.
-
-
 
 ## Default example
 
@@ -116,8 +112,6 @@ For instance when there is more content to the left, a transparent shadow appear
 </div>
 ```
 
-
-
 #### c. Table scroll - Multiple headers
 
 Tables with two headers with unclear header directions needs to define the direction of each header by setting the scope attribute to `col` or `row`.
@@ -169,8 +163,6 @@ Tables with two headers with unclear header directions needs to define the direc
     </table>
 </div>
 ```
-
-
 
 #### d. Table scroll - Irregular headers
 
