--- a/packages/storybook-html/src/components/accordion/accordion.docs.mdx
+++ b/packages/storybook-html/src/components/accordion/accordion.docs.mdx
@@ -3,7 +3,7 @@ import StatusBadge from '../../../.storybook/custom/components/StatusBadge';
 
 # Accordion
 
-<StatusBadge.Development />
+<StatusBadge.Development /><StatusBadge.DraftDoc />
 
 <a href="https://github.com/uq-its-ss/design-system/issues" class="uq-button uq-button--text" target="_blank">Check for open issues</a>
 
