--- a/packages/storybook-html/src/components/body/body-utilities.docs.mdx
+++ b/packages/storybook-html/src/components/body/body-utilities.docs.mdx
@@ -2,7 +2,7 @@ import { Meta, Story, Canvas } from '@storybook/addon-docs/blocks';
 import StatusBadge from '../../../.storybook/custom/components/StatusBadge';
 
 # Body utility classes
-<StatusBadge.Development />
+<StatusBadge.Development /><StatusBadge.DraftDoc />
 
 ## Text colour
 <Story id="components-body-utilities--text-color-utils" />
