--- a/packages/storybook-html/src/components/breadcrumb/breadcrumb.docs.mdx
+++ b/packages/storybook-html/src/components/breadcrumb/breadcrumb.docs.mdx
@@ -2,7 +2,7 @@ import { Meta, Story, Canvas } from '@storybook/addon-docs/blocks';
 import StatusBadge from '../../../.storybook/custom/components/StatusBadge';
 
 # Breadcrumb
-<StatusBadge.Stable />
+<StatusBadge.Review /><StatusBadge.ReviewDoc />
 
 ## Overview
 
