--- a/packages/storybook-html/src/components/form/form-controls.docs.mdx
+++ b/packages/storybook-html/src/components/form/form-controls.docs.mdx
@@ -2,7 +2,8 @@ import { Meta, Story, Canvas } from '@storybook/addon-docs/blocks';
 import StatusBadge from '../../../.storybook/custom/components/StatusBadge';
 
 # Form
-<StatusBadge.Development />
+
+<StatusBadge.Development /><StatusBadge.DraftDoc />
 
 ## Overview
 
