--- a/packages/storybook-html/src/components/grid-menu/grid-menu.docs.mdx
+++ b/packages/storybook-html/src/components/grid-menu/grid-menu.docs.mdx
@@ -2,7 +2,8 @@ import { Meta, Story } from '@storybook/addon-docs/blocks';
 import StatusBadge from '../../../.storybook/custom/components/StatusBadge';
 
 # Grid menu
-<StatusBadge.Review />
+
+<StatusBadge.Review /><StatusBadge.DraftDoc />
 
 ## Overview
 
