--- a/packages/storybook-html/src/components/grid/grid.docs.mdx
+++ b/packages/storybook-html/src/components/grid/grid.docs.mdx
@@ -2,7 +2,8 @@ import { Meta, Story } from '@storybook/addon-docs/blocks';
 import StatusBadge from '../../../.storybook/custom/components/StatusBadge';
 
 # Grid
-<StatusBadge.Stable />
+
+<StatusBadge.Stable /><StatusBadge.StableDoc />
 
 Layouts using our grid are achieved using a combination of `.uq-grid` (*grid
 container*) and `.uq-grid__col` (*grid column*) elements and their modifiers.
