--- a/packages/storybook-html/src/components/header/header.docs.mdx
+++ b/packages/storybook-html/src/components/header/header.docs.mdx
@@ -2,7 +2,8 @@ import { Meta, Story, Canvas } from '@storybook/addon-docs/blocks';
 import StatusBadge from '../../../.storybook/custom/components/StatusBadge';
 
 # Global header
-<StatusBadge.Review />
+
+<StatusBadge.Review /><StatusBadge.DraftDoc />
 
 The global header provides a consistent branding and navigational element across
 all UQ pages. Reinforced by the UQ strapline, the header enables users to
