--- a/packages/storybook-html/src/components/side-nav/side-nav.docs.mdx
+++ b/packages/storybook-html/src/components/side-nav/side-nav.docs.mdx
@@ -3,7 +3,7 @@ import StatusBadge from '../../../.storybook/custom/components/StatusBadge';
 
 # Side nav
 
-<StatusBadge.Development />
+<StatusBadge.Development /><StatusBadge.DraftDoc />
 
 ## Overview
 
