fix viewport issues

--- a/packages/storybook-html/src/components/hero/hero.docs.mdx
+++ b/packages/storybook-html/src/components/hero/hero.docs.mdx
@@ -8,7 +8,7 @@ import StatusBadge from '../../../.storybook/custom/components/StatusBadge';
 
 ### Default hero
 
-<Canvas withSource="none">
+<Canvas withSource="none" withToolbar>
   <Story id="components-hero--default-hero" height={505} />
 </Canvas>
 
@@ -24,7 +24,7 @@ import StatusBadge from '../../../.storybook/custom/components/StatusBadge';
 
 ### Feature image hero
 
-<Canvas withSource="none">
+<Canvas withSource="none" withToolbar>
   <Story id="components-hero--feature-hero" height={505} />
 </Canvas>
 
