--- a/packages/storybook-html/src/components/body/body-elements.docs.mdx
+++ b/packages/storybook-html/src/components/body/body-elements.docs.mdx
@@ -2,7 +2,7 @@ import { Meta, Story, Canvas } from '@storybook/addon-docs/blocks';
 import StatusBadge from '../../../.storybook/custom/components/StatusBadge';
 
 # Body elements
-<StatusBadge.Development /><StatusBadge.DraftDoc />
+<StatusBadge.Review /><StatusBadge.DraftDoc />
 
 ## Title
 <Canvas withSource="none">
