--- a/packages/storybook-html/src/components/accordion/accordion.docs.mdx
+++ b/packages/storybook-html/src/components/accordion/accordion.docs.mdx
@@ -24,10 +24,10 @@ Use the default accordion example if there is significant amount of content.
 </Canvas>
 
 ```html
-<div class="accordion" aria-label="Accordion button group">
-    <div class="accordion__item">
-      <button class="accordion__toggle" aria-controls="content-1" aria-expanded="false" id="accordion-title-1">Title 1</button>
-      <div class="accordion__content" aria-hidden="true" id="content-1" aria-labelledby="accordion-title-1">
+<div  class="uq-accordion" aria-label="Accordion button group">
+    <div  class="uq-accordion__item">
+      <button  class="uq-accordion__toggle" aria-controls="content-1" aria-expanded="false" id="accordion-title-1">Title 1</button>
+      <div  class="uq-accordion__content" aria-hidden="true" id="content-1" aria-labelledby="accordion-title-1">
           <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vestibulum auctor eros dui, vitae iaculis leo ornare eget. Etiam tristique lobortis ligula non mattis. Ut dapibus libero neque, vel tincidunt nunc tempus eget.</p>
       </div>
     </div>
@@ -47,10 +47,10 @@ Use accordions using lists if content is less and when the semantics of a list s
 </Canvas>
 
 ```html
-<ul class="accordion" aria-label="Accordion button group">
-    <li class="accordion__item">
-      <button class="accordion__toggle" aria-controls="content-11" aria-expanded="false" id="accordion-title-11">Title 1</button>
-      <div class="accordion__content" role="region" aria-hidden="true" id="content-11" aria-labelledby="accordion-title-11">
+<ul  class="uq-accordion" aria-label="Accordion button group">
+    <li  class="uq-accordion__item">
+      <button  class="uq-accordion__toggle" aria-controls="content-11" aria-expanded="false" id="accordion-title-11">Title 1</button>
+      <div  class="uq-accordion__content" role="region" aria-hidden="true" id="content-11" aria-labelledby="accordion-title-11">
           <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vestibulum auctor eros dui, vitae iaculis leo ornare eget. Etiam tristique lobortis ligula non mattis. Ut dapibus libero neque, vel tincidunt nunc tempus eget.</p>
       </div>
     </li>
@@ -68,10 +68,10 @@ Use shaded accordion when the title area needs to be shaded light grey when coll
 </Canvas>
 
 ```html
-<div class="accordion accordion--shaded" aria-label="Accordion button group">
-    <div class="accordion__item">
-      <button class="accordion__toggle" aria-controls="content-111" aria-expanded="false" id="accordion-title-111">Title 1</button>
-      <div class="accordion__content" role="region" aria-hidden="true" id="content-111" aria-labelledby="accordion-title-111">
+<div  class="uq-accordion uq-accordion--shaded" aria-label="Accordion button group">
+    <div  class="uq-accordion__item">
+      <button  class="uq-accordion__toggle" aria-controls="content-111" aria-expanded="false" id="accordion-title-111">Title 1</button>
+      <div  class="uq-accordion__content" role="region" aria-hidden="true" id="content-111" aria-labelledby="accordion-title-111">
           <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vestibulum auctor eros dui, vitae iaculis leo ornare eget. Etiam tristique lobortis ligula non mattis. Ut dapibus libero neque, vel tincidunt nunc tempus eget.</p>
       </div>
     </div>
@@ -89,10 +89,10 @@ Use small title accordion example for smaller title font sizes.
 </Canvas>
 
 ```html
-<div class="accordion accordion--secondary" aria-label="Accordion button group">
-    <div class="accordion__item">
-      <button class="accordion__toggle" aria-controls="content-1111" aria-expanded="false" id="accordion-title-1111">Title 1</button>
-      <div class="accordion__content" role="region" aria-hidden="true" id="content-1111" aria-labelledby="accordion-title-1111">
+<div  class="uq-accordion uq-accordion--secondary" aria-label="Accordion button group">
+    <div  class="uq-accordion__item">
+      <button  class="uq-accordion__toggle" aria-controls="content-1111" aria-expanded="false" id="accordion-title-1111">Title 1</button>
+      <div  class="uq-accordion__content" role="region" aria-hidden="true" id="content-1111" aria-labelledby="accordion-title-1111">
           <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vestibulum auctor eros dui, vitae iaculis leo ornare eget. Etiam tristique lobortis ligula non mattis. Ut dapibus libero neque, vel tincidunt nunc tempus eget.</p>
       </div>
     </div>
