--- a/packages/storybook-html/src/components/hero/hero.docs.mdx
+++ b/packages/storybook-html/src/components/hero/hero.docs.mdx
@@ -13,9 +13,9 @@ import StatusBadge from '../../../.storybook/custom/components/StatusBadge';
 </Canvas>
 
 ```html
-<div class="hero">  
-  <div class="hero__content uq-grid">
-    <div class="hero__text uq-grid__col uq-grid__col--xl-12">
+<div class="uq-hero">  
+  <div class="uq-hero__content uq-grid">
+    <div class="uq-hero__text uq-grid__col uq-grid__col--xl-12">
       <h1>Page title</h1>
     </div>
   </div>
@@ -29,19 +29,19 @@ import StatusBadge from '../../../.storybook/custom/components/StatusBadge';
 </Canvas>
 
 ```html
-<div class="hero hero--feature-image">  
-  <div class="hero__image">
-    <div class="hero__image--small">
+<div class="uq-hero uq-hero--feature-image">  
+  <div class="uq-hero__image">
+    <div class="uq-hero__image--small">
       <img src="https://picsum.photos/375/250" />
     </div>
-    <div class="hero__image--large">
+    <div class="uq-hero__image--large">
       <img src="https://picsum.photos/1920/540" />
     </div>
   </div>
-  <div class="hero__content uq-grid">
-    <div class="hero__text uq-grid__col--6 uq-grid__col--xl-6">
+  <div class="uq-hero__content uq-grid">
+    <div class="uq-hero__text uq-grid__col--6 uq-grid__col--xl-6">
       <h1>Start postgraduate study online</h1>
-      <p class="hero__subtext">Apply by June 30</p>
+      <p class="uq-hero__subtext">Apply by June 30</p>
       <p><a class="uq-button" href="#">Learn more</a></p>
     </div>
   </div>
