--- a/packages/storybook-html/src/components/tabs/tabs.docs.mdx
+++ b/packages/storybook-html/src/components/tabs/tabs.docs.mdx
@@ -21,22 +21,22 @@ hierarchical level.
 </Canvas>
 
 ```html
-  <div id="tabsDefaultExample" class="tabs tabs--outline">
-    <div class="tabs__tab-list-wrapper">
-      <div class="tabs__tab-list" role="tablist" aria-label="Tab List">
-        <button class="tabs__tab tabs__tab--active" role="tab" aria-selected="true" aria-controls="tab1-panel" id="tab1">Tab 1</button>
-        <button class="tabs__tab" role="tab" aria-selected="false" aria-controls="tab2-panel" id="tab2" tabindex="-1">Tab 2</button>
-        <button class="tabs__tab" role="tab" aria-selected="false" aria-controls="tab3-panel" id="tab3" tabindex="-1">Tab 3</button>
-        <a class="tabs__link" href="#">Tab link</a>
+  <div id="tabsDefaultExample" class="uq-tabs uq-tabs--outline">
+    <div class="uq-tabs__tab-list-wrapper">
+      <div class="uq-tabs__tab-list" role="tablist" aria-label="Tab List">
+        <button class="uq-tabs__tab uq-tabs__tab--active" role="tab" aria-selected="true" aria-controls="tab1-panel" id="tab1">Tab 1</button>
+        <button class="uq-tabs__tab" role="tab" aria-selected="false" aria-controls="tab2-panel" id="tab2" tabindex="-1">Tab 2</button>
+        <button class="uq-tabs__tab" role="tab" aria-selected="false" aria-controls="tab3-panel" id="tab3" tabindex="-1">Tab 3</button>
+        <a class="uq-tabs__link" href="#">Tab link</a>
       </div>
     </div>
-    <div class="tabs__tab-panel tabs__tab-panel--active" role="tabpanel" id="tab1-panel" aria-labelledby="tab1" tabindex="0">
+    <div class="uq-tabs__tab-panel uq-tabs__tab-panel--active" role="tabpanel" id="tab1-panel" aria-labelledby="tab1" tabindex="0">
       <p>Tab1 panel text</p>
     </div>
-    <div class="tabs__tab-panel" role="tabpanel" id="tab2-panel" aria-labelledby="tab2" tabindex="0" hidden="">
+    <div class="uq-tabs__tab-panel" role="tabpanel" id="tab2-panel" aria-labelledby="tab2" tabindex="0" hidden="">
       <p>Tab2 panel text</p>
     </div>
-    <div class="tabs__tab-panel" role="tabpanel" id="tab3-panel" aria-labelledby="tab3" tabindex="0" hidden="">
+    <div class="uq-tabs__tab-panel" role="tabpanel" id="tab3-panel" aria-labelledby="tab3" tabindex="0" hidden="">
       <p>Tab3 panel text</p>
     </div>
   </div>
@@ -51,7 +51,7 @@ hierarchical level.
 </Canvas>
 
 ```html
-  <div class="tabs">
+  <div class="uq-tabs">
     ...
   </div>
 ```
@@ -63,7 +63,7 @@ hierarchical level.
 </Canvas>
 
 ```html
-  <div class="tabs tabs--lined">
+  <div class="uq-tabs uq-tabs--lined">
     ...
   </div>
 ```
@@ -75,9 +75,9 @@ hierarchical level.
 </Canvas>
 
 ```html
-<div class="tabs tabs--outline">
-  <div class="tabs__tab-list" role="tablist" aria-label="Tab List">
-    <button class="tabs__tab tabs__tab--active" role="tab" aria-selected="true" aria-controls="tab1-panel" id="tab1">
+<div class="uq-tabs uq-tabs--outline">
+  <div class="uq-tabs__tab-list" role="tablist" aria-label="Tab List">
+    <button class="uq-tabs__tab uq-tabs__tab--active" role="tab" aria-selected="true" aria-controls="tab1-panel" id="tab1">
         <span class="uq-icon uq-icon--search"></span> Tab 1
     </button>
     ...
@@ -90,7 +90,7 @@ hierarchical level.
 </Canvas>
 
 ```html
-  <div class="tabs tabs--outline tabs--full-width">
+  <div class="uq-tabs uq-tabs--outline uq-tabs--full-width">
     ...
   </div>
 ```
@@ -102,7 +102,7 @@ hierarchical level.
 </Canvas>
 
 ```html
-  <div class="tabs tabs--outline tabs--small">
+  <div class="uq-tabs uq-tabs--outline uq-tabs--small">
     ...
   </div>
 ```
@@ -114,7 +114,7 @@ hierarchical level.
 </Canvas>
 
 ```html
-  <div class="tabs tabs--outline tabs--reversed">
+  <div class="uq-tabs uq-tabs--outline uq-tabs--reversed">
     ...
   </div>
 ```
