tabs prefix in doc

--- a/packages/storybook-html/src/components/tabs/tabs.docs.mdx
+++ b/packages/storybook-html/src/components/tabs/tabs.docs.mdx
@@ -136,10 +136,10 @@ hierarchical level.
 
 - When the user tabs through the tabs, it receives focus and automatically opens its related tab panel.
 - The WAI-ARIA roles used are `[role="tablist"]` for the tab list, `[role="tab"]` for the individual tab items and `[role="tabpanel"]` for the tab panels.
-- Tab active state: `tabindex = "0"`, classname `tabs__tab--active` is added, `aria-selected = "true"`.
-- Tab inactive state: `tabindex = "-1"`, classname `tabs__tab--active` is removed, `aria-selected = "false"`.
-- Tab panel active state: `tabindex = "0"`, classname `tabs__tab-panel--active` is added, `hidden` is removed.
-- Tab panel inactive state: `tabindex = "0"`, classname `tabs__tab-panel--active` is removed, `hidden` is added.
+- Tab active state: `tabindex = "0"`, classname ` uq-tabs__tab--active` is added, `aria-selected = "true"`.
+- Tab inactive state: `tabindex = "-1"`, classname ` uq-tabs__tab--active` is removed, `aria-selected = "false"`.
+- Tab panel active state: `tabindex = "0"`, classname ` uq-tabs__tab-panel--active` is added, `hidden` is removed.
+- Tab panel inactive state: `tabindex = "0"`, classname ` uq-tabs__tab-panel--active` is removed, `hidden` is added.
 - Colour contrast test for the tabs showed a WCAG AA Pass.
 <br />
 
@@ -170,6 +170,6 @@ new Tabs([options]);
 | Name | Type | Attributes | Default | Description |
 | ---- | ---- | ---------- | ------- | ----------- |
 | container | HTMLElement | Optional | | Optional container for tabs and panels. Useful for when you have multiple tab lists on a page. |
-| tabListSelector | String | Optional | `.tabs__tab-list` | Selector string of the tab lists. |
-| tabSelector | String | Optional | `.tabs__tab` | Selector string of the tabs. |
-| tabPanelSelector | String | Optional | `.tabs__tab-panel` | Selector string of the tab panels. |
+| tabListSelector | String | Optional | `. uq-tabs__tab-list` | Selector string of the tab lists. |
+| tabSelector | String | Optional | `. uq-tabs__tab` | Selector string of the tabs. |
+| tabPanelSelector | String | Optional | `. uq-tabs__tab-panel` | Selector string of the tab panels. |
