icon, storybook-html: style icons and docs

--- a/packages/storybook-html/src/components/icon/icon.docs.mdx
+++ b/packages/storybook-html/src/components/icon/icon.docs.mdx
@@ -8,10 +8,12 @@ import StatusBadge from '../../../.storybook/custom/components/StatusBadge';
 
 <Story id="components-icon--icon" />
 
-## CSS classes
+## Usage
 
-## Sass mixins and functions
+### CSS classes
 
-## SVG files
+### Sass mixins and functions
+
+### SVG files
 
 ## Javascript reference
