--- a/packages/storybook-html/src/components/sections/sections.docs.mdx
+++ b/packages/storybook-html/src/components/sections/sections.docs.mdx
@@ -96,8 +96,7 @@ Scale background images on the section to always cover `section--background-imag
 
 ```html
 <div class="section section--image-behind">
-  <div class="section__background"><img src="http://lorempixel.com/1920/1080" /></div>
-  </div>
+  <div class="section__background"><img src="/images/uq-image-01.jpeg" /></div>
 </div>
 ```
 
