--- a/packages/storybook-html/src/components/hero/hero.docs.mdx
+++ b/packages/storybook-html/src/components/hero/hero.docs.mdx
@@ -15,8 +15,8 @@ import StatusBadge from '../../../.storybook/custom/components/StatusBadge';
 
 ```html
 <div class="uq-hero">  
-  <div class="uq-hero__content uq-grid">
-    <div class="uq-hero__text uq-grid__col uq-grid__col--xl-12">
+  <div class="uq-hero__content">
+    <div class="uq-hero__text">
       <h1>Page title</h1>
     </div>
   </div>
@@ -33,14 +33,14 @@ import StatusBadge from '../../../.storybook/custom/components/StatusBadge';
 <div class="uq-hero uq-hero--feature-image">  
   <div class="uq-hero__image">
     <div class="uq-hero__image--small">
-      <img src="https://picsum.photos/375/250" />
+      <img src="/images/hero/hero_example--small.jpg" />
     </div>
     <div class="uq-hero__image--large">
-      <img src="https://picsum.photos/1920/540" />
+      <img src="/images/hero/hero_example--large.jpg" />
     </div>
   </div>
-  <div class="uq-hero__content uq-grid">
-    <div class="uq-hero__text uq-grid__col--6 uq-grid__col--xl-6">
+  <div class="uq-hero__content">
+    <div class="uq-hero__text">
       <h1>Start postgraduate study online</h1>
       <p class="uq-hero__subtext">Apply by June 30</p>
       <p><a class="uq-button" href="#">Learn more</a></p>
