storybook-html: fix `icon` doc

--- a/packages/storybook-html/src/components/icon/icon.docs.mdx
+++ b/packages/storybook-html/src/components/icon/icon.docs.mdx
@@ -55,7 +55,7 @@ provide mixins and a "get" function.
 @include icon-constants.icon-base; // --> .uq-icon {...}
 
 // Include the icons you want
-@include icon-constants.icon("category-name--icon-name"); // --> .uq-icon--category-name--icon-name
+@include icon-constants.icon("category-name--icon-name"); // --> .uq-icon--category-name--icon-name {...}
 ```
 
 You can now use the CSS class in your HTML markup as previously described.
