storybook-html: remove `footer` GTM tags and create initial docs

--- a/packages/storybook-html/src/components/footer/footer.docs.mdx
+++ b/packages/storybook-html/src/components/footer/footer.docs.mdx
@@ -1,3 +1,15 @@
+import { Meta, Story, Canvas } from '@storybook/addon-docs/blocks';
+import StatusBadge from '../../../.storybook/custom/components/StatusBadge';
+
+# Global footer
+
+<StatusBadge.Review /><StatusBadge.DraftDoc />
+
+<Canvas withSource="none" withToolbar>
+  <Story height={339} id="components-footer--footer" />
+</Canvas>
+
+```html
 <footer class="uq-footer">
   <div class="uq-footer__container">
     <div class="uq-footer__acknowledgement">
@@ -48,3 +60,4 @@
     </div>
   </div>
 </footer>
+```
