--- a/packages/storybook-html/src/components/icon/icon.docs.mdx
+++ b/packages/storybook-html/src/components/icon/icon.docs.mdx
@@ -2,7 +2,7 @@ import { Meta, Story, Canvas } from '@storybook/addon-docs/blocks';
 import StatusBadge from '../../../.storybook/custom/components/StatusBadge';
 
 # Icons
-<StatusBadge.Development />
+<StatusBadge.Development /><StatusBadge.DraftDoc />
 
 ## List of icons
 
