storybook-html: rename form validation story

--- a/packages/storybook-html/src/patterns/form-validation/form-validation.story.mdx
+++ b/packages/storybook-html/src/patterns/form-validation/form-validation.story.mdx
@@ -28,7 +28,7 @@ export const BadFormExample = () => {
   return baddestForm;
 };
 
-<Story name="Primary">
+<Story name="Empty form submit example">
   {BadFormExample.bind({})}
 </Story>
 
