--- a/packages/storybook-html/src/components/icon/icon.docs.mdx
+++ b/packages/storybook-html/src/components/icon/icon.docs.mdx
@@ -60,6 +60,8 @@ provide mixins and a "get" function.
 
 You can now use the CSS class in your HTML markup as previously described.
 
+---
+
 #### `get-icon($icon[, $color])`
 
 Get the data URL for a specific icon (and optional set a color for fills and
@@ -105,7 +107,7 @@ Here's an example using the `$color` parameter.
 You can find a set of normalised & optimised SVG files in the `dist/images`
 folder.
 
-## Javascript reference
+## JavaScript reference
 
 Array list of icons exported as a CommonJS module.
 
