--- a/packages/storybook-html/src/docs/introduction/get-started.story.mdx
+++ b/packages/storybook-html/src/docs/introduction/get-started.story.mdx
@@ -24,7 +24,8 @@ Here are the ways you can start using the UQ Design System right now;
 - If you would like a walkthrough of the docs for your analysis needs, please [contact us][2] for a tour.
 
 ## Reading the docs
-Reading the documentation is an integral part of implementing the Design System. It's where we provide:
+Reading the documentation is an integral part of implementing the Design System.
+It's where we provide:
 - HTML snippets,
 - JavaScript & Sass library docs,
 - and guidance via standards, patterns, and systems.
@@ -45,22 +46,45 @@ npm i @uqds/button
 
 See the [following list of package names](#component-package-list).
 
-## General package structure
+## General component usage
 
-Subject to change.
+This is not exhaustive advice on how to use each component but it should be
+enough to get you started.
 
 ### Sass library
 
-Non-emitting code: `@uqds/{component}/src/scss/_global.scss`. Doesn't result in
-any compiled CSS by itself when processed. The `@uqds/core` package is an
-example of a package that only contains non-emitting code.
+Non-emitting code, i.e. `@uqds/{component}/src/scss/_global.scss`, doesn't
+result in any compiled CSS by itself when processed. The `@uqds/core` package is
+an example of a package that only contains non-emitting code. You can use this
+file wherever you need reference variables, functions, and mixins.
 
-Emitting code: `@uqds/{component}/src/scss/_component.scss`. Results in compiled
-CSS when processed.
+We recommend using namespaces when importing the non-emitting [Sass modules][5].
+For example,
+
+```scss
+// With a namespace (recommended)
+@use '@uqds/core/src/scss/global' as core;
+
+// Without a namespace (no recommended)
+@use '@uqds/core/src/scss/global' as *;
+
+.example-class {
+  font-size: core.$font-size-xxl;
+}
+```
+
+Emitting code, i.e. `@uqds/{component}/src/scss/_component.scss`, results in
+compiled CSS when processed. This file should only be imported once (per
+component) into your project. Unlike the non-emitting code, this file can be
+safely imported without a namespace. For example,
+
+```scss
+@use '@uqds/button/src/scss/component' as *;
+```
 
 ### JavaScript library
 
-Coming soon.
+Instructions coming soon after we get our house in order.
 
 ## Component package list
 
@@ -99,3 +123,4 @@ Coming soon.
 [2]: /?path=/docs/introduction-overview--page#contacts-and-community
 [3]: https://www.figma.com/file/Li7SZkmaLgw8ZdiHje2q7x/Future-Students-Design-System?node-id=1691%3A0
 [4]: https://registry.npmjs.org
+[5]: https://sass-lang.com/documentation/at-rules/use
