bug/storybook-html: fix broken link w/ permalink to env. setup docs

--- a/packages/storybook-html/src/docs/introduction/get-started.story.mdx
+++ b/packages/storybook-html/src/docs/introduction/get-started.story.mdx
@@ -8,7 +8,7 @@ import { Meta, Story, Canvas } from '@storybook/addon-docs/blocks';
 <div className="alert alert--warning" role="alert">
   <div className="alert__message">
     <h2><span className="uq-icon uq-icon--architecture-and-planning--heavy-equipment-lift-hook-box uq-icon--text"></span> We're in restricted beta!</h2>
-    Currently restricted to ITS-ADS staff and/or those with access to our tools account on AWS. Please refer to the 🔒&nbsp;<a href="https://confluence.its.uq.edu.au/confluence/display/UQDS/Set+up+environment+for+AWS+CodeArtifact" target="_blank">environment setup instructions</a> if you <em>do</em> have access. Otherwise, the notes below should still give you an idea of what to expect.
+    Currently restricted to ITS-ADS staff and/or those with access to our tools account on AWS. Please refer to the 🔒&nbsp;<a href="https://confluence.its.uq.edu.au/confluence/x/0DwDCw" target="_blank">environment setup instructions</a> if you <em>do</em> have access. Otherwise, the notes below should still give you an idea of what to expect.
   </div>
 </div><br/>
 
@@ -119,7 +119,7 @@ Instructions coming soon after we get our house in order.
 
 \* '--JS--' denotes that a package contains a JavaScript library.
 
-[1]: https://confluence.its.uq.edu.au/confluence/display/UQDS/Set+up+environment+for+AWS+CodeArtifact
+[1]: https://confluence.its.uq.edu.au/confluence/x/0DwDCw
 [2]: /?path=/docs/introduction-overview--page#contacts-and-community
 [3]: https://www.figma.com/file/Li7SZkmaLgw8ZdiHje2q7x/Future-Students-Design-System?node-id=1691%3A0
 [4]: https://registry.npmjs.org
