storybook-html: fix grid-menu w/ icon display via HTML changes

--- a/packages/storybook-html/src/components/grid-menu/grid-menu.docs.mdx
+++ b/packages/storybook-html/src/components/grid-menu/grid-menu.docs.mdx
@@ -74,7 +74,7 @@ The height of the grid menu items is by default equalised on its row.
 
 ```html
 <ul class="uq-grid-menu">
-  <li><a href="#"><span class="uq-grid-menu__icon uq-icon uq-icon--car-1"> </span> <span class="uq-grid-menu__title">Menu link 1</span></a></li>
+  <li><a href="#"><span class="uq-grid-menu__icon uq-icon uq-icon--other--car-1"></span><span class="uq-grid-menu__title">Menu link 1</span></a></li>
   ...
 </ul>
 ```
